<!--
  ~ Copyright (c) 2021 2bllw8
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<resources>
    <string name="app_name">Aer</string>

    <string name="anemo_description">Local private storage</string>
    <string name="anemo_info">Files in Aer storage are not directly accessible to other apps.\n\nNote that Aer is in development 🏗️. Accidents happen. Please keeps backups 👷‍♀️ for your protection.</string>
    <string name="anemo_error">Prior to Android 11, external storage is readily visible to other apps. Prefer Internal storage for better privacy.</string>

    <string name="password_label">Aer password</string>

    <string name="password_hint_field">Password</string>
    <string name="password_hint_repeat">Type again to confirm</string>
    <string name="password_hint_current">Current password</string>

    <string name="password_error_length">The password should have length at least %1$d</string>
    <string name="password_error_mismatch">The passwords do not match</string>
    <string name="password_error_wrong">Wrong password</string>

    <string name="password_input_message">Type your Aer password to unlock the Aer Storage</string>
    <string name="password_input_action">Unlock</string>
    <string name="password_input_biometric_message">Authenticate to unlock the Aer Storage</string>
    <string name="password_input_biometric_fallback">Use password</string>

    <string name="password_set_title">Add password protection</string>
    <string name="password_set_message">Set a password to lock the access to the Aer Storage</string>
    <string name="password_set_action">Set password</string>

    <string name="password_change_title">Change password</string>
    <string name="password_change_message">Change the password to unlock the Aer Storage</string>
    <string name="password_change_action">Change</string>
    <string name="password_change_remove">Remove</string>

    <string name="receiver_label">Import into Aer</string>

    <string name="receiver_importing_message">Importing the file…</string>
    <string name="receiver_importing_done_ok">Imported to Aer</string>
    <string name="receiver_importing_done_fail">Could not import the file. Try again</string>

    <string name="receiver_default_file_name">Shared file</string>

    <string name="tile_title">Aer storage</string>

    <string name="tile_lock">Lock Aer</string>
    <string name="tile_unlock">Unlock Aer</string>
    <string name="tile_status_locked">Now locked</string>
    <string name="tile_status_unlocked">Now unlocked</string>

    <string name="tile_auto_lock">Aer storage was automatically locked</string>

    <string name="launcher_no_activity">Can\'t find system Files app</string>
    <string name="shortcut_config_long">Access Configuration</string>
    <string name="shortcut_config_short">Access Config</string>
    <string name="shortcut_config_disabled">Access Configuration (disabled)</string>

    <string name="configuration_label">Configuration</string>
    <string name="configuration_shortcut">Show shortcut in app list</string>
    <string name="configuration_protection">Protection</string>
    <string name="configuration_password_set">Set password</string>
    <string name="configuration_password_change">Change password</string>
    <string name="configuration_storage_lock">Lock storage access</string>
    <string name="configuration_storage_unlock">Unlock storage access</string>
    <string name="configuration_storage_unlock_biometric">Allow storage unlock with biometric access</string>
    <string name="configuration_storage_lock_auto">Automatically lock access after delay</string>
    <string name="title_activity_storage_pref">StoragePrefActivity</string>
    <string name="shortcut_storageconfig_long">Storage Configuration</string>
    <string name="shortcut_storageconfig_short">Storage Config</string>
    <string name="shortcut_storageconfig_disabled">Storage Config (Disabled)</string>
    <string name="storage_config_select_help">Tap to select / Drag to reorder:</string>
    <string name="storage_config_screen_title">Aer Storage Backend</string>
    <string name="configuration_auto_lock_delay_minutes_label">Auto lock delay (in minutes)</string>

</resources>
