<!--
  ~ Copyright (c) 2022 2bllw8
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_configuration"
        android:shortcutDisabledMessage="@string/shortcut_config_disabled"
        android:shortcutId="configuration"
        android:shortcutLongLabel="@string/shortcut_config_long"
        android:shortcutShortLabel="@string/shortcut_config_short">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="alt.nainapps.aer.config.ConfigurationActivity"
            android:targetPackage="alt.nainapps.aer" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_configuration"
        android:shortcutDisabledMessage="@string/shortcut_storageconfig_disabled"
        android:shortcutId="storageconfig"
        android:shortcutLongLabel="@string/shortcut_storageconfig_long"
        android:shortcutShortLabel="@string/shortcut_storageconfig_short">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="alt.nainapps.aer.config.StorageConfigActivityKt"
            android:targetPackage="alt.nainapps.aer" />
    </shortcut>
</shortcuts>
