<!--
  ~ Copyright (c) 2022 2bllw8
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="8dp">

        <Switch
            android:id="@+id/configuration_show_shortcut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:minHeight="56dp"
            android:paddingHorizontal="16dp"
            android:text="@string/configuration_shortcut"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="16dp"
            android:text="@string/configuration_protection"
            android:textColor="?android:attr/colorAccent" />

        <TextView
            android:id="@+id/configuration_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:minHeight="56dp"
            android:paddingHorizontal="16dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:text="@string/configuration_storage_lock" />

        <TextView
            android:id="@+id/configuration_password_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:minHeight="56dp"
            android:paddingHorizontal="16dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:text="@string/configuration_password_set" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Switch
            android:id="@+id/configuration_auto_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:minHeight="56dp"
            android:paddingHorizontal="16dp"
            android:text="@string/configuration_storage_lock_auto"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/configuration_auto_lock_delay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="16dp"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:labelFor="@+id/config_auto_lock_delay_minutes_input"
                android:text="@string/configuration_auto_lock_delay_minutes_label"
                tools:text="@string/configuration_auto_lock_delay_minutes_label"/>

            <EditText
                android:id="@+id/config_auto_lock_delay_minutes_input"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:autofillHints="autoLockDelayMinutes"
                android:ems="5"
                android:inputType="numberDecimal"
                android:text="@string/configuration_auto_lock_delay_minutes_default"
                />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Switch
            android:id="@+id/configuration_biometric_unlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:minHeight="56dp"
            android:paddingHorizontal="16dp"
            android:text="@string/configuration_storage_unlock_biometric"
            android:textSize="16sp" />


    </LinearLayout>
</ScrollView>
